--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -154,6 +154,7 @@
             "/themes/vendor/moment/moment.min.js",
             "/themes/vendor/noUiSlider/nouislider.min.js",
             "/themes/vendor/wnumb/wNumb.min.js",
+            "/themes/vendor/highcharts/modules/boost.js",
             "/themes/js/formula.min.js",
             "/themes/js/jspdf.umd.min.js",
             "/themes/js/dom-to-image.min.js",
