--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
@@ -417,6 +417,11 @@
                             const zh = ['零', '一', '二', '三', '四', '五', '六', '七', '八', '九'];
 
                             chart = Highcharts.chart('riskChart', {
+                                boost: {
+                                    useGPUTranslations: true,
+                                    // 使用 GPU 提升效能
+                                    seriesThreshold: 1 // 當有 1 個以上系列時啟用 boost
+                                },
                                 chart: {
                                     type: 'scatter',
                                     zooming: {
@@ -424,7 +429,15 @@
                                             enabled: false
                                         }
                                     },
-                                    height: 446
+                                    height: 446,
+                                    events: {
+                                        render() {
+                                            const svgs = this.container.querySelectorAll('svg');
+                                            svgs.forEach(function (svg) {
+                                                svg.setAttribute('shape-rendering', 'geometricPrecision');
+                                            });
+                                        }
+                                    }
                                 },
                                 credits: {
                                     enabled: false
