--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -861,7 +861,7 @@
 
                             </tbody>
                         </table>
-                        <div class="l-dataNotes"><span class="t-date">資料日期：2023/09/13</span></div>
+                        <div class="l-dataNotes"><span class="t-date">資料日期：@Model.BondDataDate.ToString("yyyy/MM/dd")</span></div>
                     </div>
                     <div class="l-action">
                         <div class="l-action__item">
