Update：全產品搜尋頁－國外股票搜尋 autocomplete 加上交易所代碼

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -924,7 +924,7 @@
 
                         $.each(this.Result.List.FStock, function (i, item) {
                             let obj = {
-                                value: item.FirstBankCode + ' ' + item.ChineseName + ' ' + item.EnglishName,
+                                value: item.FundCodePair.Key + ' ' + item.FirstBankCode + ' ' + item.ChineseName + ' ' + item.EnglishName,
                                 data: {
                                     type: 'FStock',
                                     detailUrl: '@Model.SearchResultModel.ForeignStockDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
