--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -805,6 +805,8 @@
                     formatResult: function (suggestion, currentValue) {
                         let detailUrl = suggestion.data.detailUrl ? suggestion.data.detailUrl : '#';
 
+                        // 比較 按鈕
+                        let $compare = suggestion.data.compareBtnHtml ? suggestion.data.compareBtnHtml : '';
                         // like 按鈕
                         let $like = suggestion.data.focusBtnHtml ? `<a ${suggestion.data.focusBtnHtml}></a>` : '';
                         // 申購按鈕
@@ -814,6 +816,7 @@
                                 <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
                                     <div class="c-itemKeyword__title">${$.Autocomplete.defaults.formatResult(suggestion, currentValue)}</div>
                                 </a>
+                                <div class="c-itemKeyword__collections">${$compare}</div>
                                 <div class="c-itemKeyword__collections">${$like}</div>
                                 ${$purchase}
                             </div>`;
@@ -891,6 +894,7 @@
                                     type: 'Fund',
                                     detailUrl: '@Model.SearchResultModel.FundDetailPageLink' + '?' + $.param({ id: item.ProductCode }),
                                     purchase: item.CanOnlineSubscription,
+                                    compareBtnHtml: item.CompareButtonHtml,
                                     focusBtnHtml: item.FocusButtonAutoHtml,
                                     subscribeBtnHtml: item.SubscribeButtonAutoHtml
                                 }
@@ -905,6 +909,7 @@
                                     type: 'ETF',
                                     detailUrl: '@Model.SearchResultModel.EtfDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                                     purchase: item.CanOnlineSubscription,
+                                    compareBtnHtml: item.CompareButtonHtml,
                                     focusBtnHtml: item.FocusButtonAutoHtml,
                                     subscribeBtnHtml: item.SubscribeButtonAutoHtml
                                 }
