--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -254,18 +254,6 @@
                             autocomplete.isRegisteGlobalEvent = true;
                         }
 
-                        //if (SC_DATA.IsLoggedIn) {
-                        //    // 停止 like/compare icon 冒泡，避免觸發 autocomplete 的 select 事件，導致 suggestions container 被關閉
-                        //    $(container).find('.o-statusBtn').off('click.autocomplete').on('click.autocomplete', function (e) {
-                        //        e.stopPropagation();
-                        //    });
-                        //} else {
-                        //    // 停止 compare icon 冒泡，避免觸發 autocomplete 的 select 事件，導致 suggestions container 被關閉
-                        //    $(container).find('.o-statusBtn--compare').off('click.autocomplete').on('click.autocomplete', function (e) {
-                        //        e.stopPropagation();
-                        //    });
-                        //}
-
                         // 綁定 like icon 的互動功能
                         $(container).find('[data-ia]').interactive();
                         // 綁定 like icon 的彈跳登入畫面
@@ -278,15 +266,16 @@
                         let detailUrl = suggestion.data.detailUrl ? suggestion.data.detailUrl : '#';
 
                         // like 按鈕
-                        let $like = `<a ${suggestion.data.focusBtnHtml}></a>`;
-
+                        let $like = `<a href="#" eh-focus eh-focus-type="${suggestion.data.type}" eh-focus-id="${suggestion.data.id}" eh-focus-name="${suggestion.data.name}" data-eh="focus-init,focus-click" data-msg="加入關注|取消關注" data-ia="true" eh-focus-add="false" class="o-statusBtn o-statusBtn--like"></a>`;
+                        
                         // 比較 按鈕
                         let $compare = suggestion.data.isCompare == true ?
                             // <!-- [data-ia]: 展示 icon 的互動操作功能 -->
-                            `<a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-eh="compare-init,compare-click" data-ia="true" eh-compare="" eh-compare-add="false" eh-compare-id="${suggestion.data.id}" eh-compare-name="${suggestion.data.name}" eh-compare-type="${suggestion.data.type}" href="#" ></a>` : '';
+                            `<a href="#" class="o-statusBtn o-statusBtn--compare" data-after-lt="比較" data-msg="加入比較|取消比較" data-eh="compare-init,compare-click" data-ia="true" eh-compare="" eh-compare-add="false" eh-compare-id="${suggestion.data.id}" eh-compare-name="${suggestion.data.name}" eh-compare-type="${suggestion.data.type}"></a>` : '';
 
                         // 申購按鈕
-                        let $purchase = suggestion.data.purchase ? `<div class="c-itemKeyword__actions"><a ${suggestion.data.subscribeBtnHtml}>申購</a></div>` : '';
+                        let $purchase = suggestion.data.purchase ?
+                            `<div class="c-itemKeyword__actions"><a <a href="#" eh-subscription eh-subscription-type="${suggestion.data.type}" eh-subscription-id="${suggestion.data.id}" data-eh="subscription-init,subscription-click" data-popup="true" class="o-btn o-btn--primary o-btn--auto o-btn--thinest">申購</a></div>` : '';
 
                         return `<div class="c-itemKeyword">
                             <a href="${detailUrl}" class="c-itemKeyword__content" target="_blank">
@@ -350,16 +339,13 @@
                     let obj = {
                         value: item.ProductCode + ' ' + item.ProductName,
                         data: {
+                            id: item.ProductCode,
+                            name: item.ProductName,
                             type: type,
                             displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.FundDetailPageLink' + '?' + $.param({ id: item.ProductCode }),
                             purchase: item.CanOnlineSubscription,
-                            focusBtnHtml: item.FocusButtonAutoHtml,
-                            compareBtnHtml: item.CompareButtonHtml,
-                            subscribeBtnHtml: item.SubscribeButtonAutoHtml,
                             isCompare: true,
-                            id: item.ProductCode,
-                            name: item.ProductName
                         }
                     };
                     list.push(obj);
@@ -372,15 +358,13 @@
                     let obj = {
                         value: item.FirstBankCode + ' ' + item.ETFName,
                         data: {
+                            id: item.FirstBankCode,
+                            name: item.ETFName,
                             type: type,
                             displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.EtfDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                             purchase: item.CanOnlineSubscription,
-                            focusBtnHtml: item.FocusButtonAutoHtml,
-                            subscribeBtnHtml: item.SubscribeButtonAutoHtml,
                             isCompare: true,
-                            id: item.FirstBankCode,
-                            name: item.ETFName
                         }
                     };
                     list.push(obj);
@@ -393,11 +377,12 @@
                     let obj = {
                         value: item.FirstBankCode + ' ' + item.ChineseName + ' ' + item.EnglishName,
                         data: {
+                            id: item.FirstBankCode,
+                            name: item.ChineseName + ' ' + item.EnglishName,
+                            type: type,
                             displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.ForeignStockDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                             purchase: item.CanOnlineSubscription,
-                            focusBtnHtml: item.FocusButtonAutoHtml,
-                            subscribeBtnHtml: item.SubscribeButtonAutoHtml
                         }
                     };
                     list.push(obj);
@@ -406,12 +391,17 @@
 
             function getForeignBondsResult(list) {
                 $.each(SC_DATA.S_Result.ForeignBonds, function (i, item) {
+
                     let type = 'ForeignBonds';
                     let obj = {
                         value: item.BondCode + ' ' + item.BondName,
                         data: {
+                            id: item.BondCode,
+                            name: item.BondCode + ' ' + item.BondName,
+                            type: type,
                             displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.ForeignBondDetailPageLink' + '?' + $.param({ id: item.BondCode }),
+                            purchase: item.OpenToPublic == 'Y' && item.Listed == 'Y' ,
                         }
                     };
                     list.push(obj);
