--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/AnnouncementsAndWarnings.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AnnouncementsAndWarnings/AnnouncementsAndWarnings.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.AnnouncementsAndWarnings
 @model AnnouncementsAndWarningsModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
     return;
 }
