--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ArticleContent/ArticleContent.cshtml
@@ -1,8 +1,7 @@
 ﻿@model Feature.Wealth.Component.Models.ArticleContent.ArticleContentModel
 @using Feature.Wealth.Component.Models.ArticleContent
-@using Foundation.Wealth.Helper
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
