--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/BigAndSmallCards/BigAndSmallCards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/BigAndSmallCards/BigAndSmallCards.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.BigAndSmallCards
 @model BigAndSmallCardsModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
 	return;
 }
