--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountContent/DiscountContent.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountContent/DiscountContent.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Feature.Wealth.Component.Models.DiscountContent.DiscountContentModel
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
