--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Features/Features.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Features/Features.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.Features
 @model FeaturesModel
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
