--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/Breadcrumbs.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Navigation/Breadcrumbs.cshtml
@@ -1,4 +1,10 @@
 ﻿@inherits Xcms.Sitecore.Foundation.Basic.MVC.EditorCompatibleView<IEnumerable<Xcms.Sitecore.Feature.Navigation.Models.Breadcrumb>>
+
+@if (Model == null)
+{
+    return;
+}
+
 <div class="l-navbar__breadcrumb">
     <ul class="o-breadcrumb">
         @{
