--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountTab/DiscountTab.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountTab/DiscountTab.cshtml
@@ -1,7 +1,6 @@
 ﻿@model Feature.Wealth.Component.Models.DiscountTab.DiscountTabModel
-@using Xcms.Sitecore.Foundation.Basic.SitecoreExtensions;
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
@@ -12,9 +11,9 @@
 }
 
 @{
-    var mainTitle = Html.Sitecore().Field("Main Title", Model.DataSource).ToString();
+    var mainTitle = Model.DataSource["Main Title"];
 
-    if (Model.DataSource.FieldHasValue("Main Title"))
+    if (!string.IsNullOrEmpty(mainTitle))
     {
         <div class="l-mainstage">
             <div class="l-mainstage__wrap">
@@ -33,8 +32,8 @@
 
                 @foreach (var item in Model.TabList)
                 {
-                    var tabTitle = Html.Sitecore().Field("Tab Title", item).ToString();
-                    var placeHolder = Html.Sitecore().Field("Placeholder", item).ToString();
+                    var tabTitle = item.Item["Tab Title"];
+                    var placeHolder = item.Item["Placeholder"];
 
                     if (!string.IsNullOrEmpty(tabTitle) && !string.IsNullOrEmpty(placeHolder))
                     {
@@ -51,8 +50,8 @@
                 <div class="c-tab__dropdown">
                     @foreach (var item in Model.TabList)
                     {
-                        var tabTitle = Html.Sitecore().Field("Tab Title", item).ToString();
-                        var placeHolder = Html.Sitecore().Field("Placeholder", item).ToString();
+                        var tabTitle = item.Item["Tab Title"];
+                        var placeHolder = item.Item["Placeholder"];
 
                         if (!string.IsNullOrEmpty(tabTitle) && !string.IsNullOrEmpty(placeHolder))
                         {
@@ -67,7 +66,7 @@
 
         @foreach (var item in Model.TabList)
         {
-            var placeHolder = Html.Sitecore().Field("Placeholder", item).ToString();
+            var placeHolder = item.Item["Placeholder"];
 
             if (!string.IsNullOrEmpty(placeHolder))
             {
