--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoice.cshtml
@@ -3,6 +3,10 @@
 @using Feature.Wealth.Component.Models.EFirstChoice
 @model EFirstChoiceModel
 
+@if (Model.Item == null)
+{
+    return;
+}
 @{
     var modelitem = Model.Item;
 }
@@ -178,11 +182,11 @@
                                                 if (item.PercentageChangeInFundPrice < 0)
                                                 {
                                                     <span class="o-fall">@item.PercentageChangeInFundPrice%</span>
-												}
-												else if (item.PercentageChangeInFundPrice == 0)
-												{
-													<span>@item.PercentageChangeInFundPrice%</span>
-												}
+                                                }
+                                                else if (item.PercentageChangeInFundPrice == 0)
+                                                {
+                                                    <span>@item.PercentageChangeInFundPrice%</span>
+                                                }
                                                 else
                                                 {
                                                     <span class="o-rise">@item.PercentageChangeInFundPrice%</span>
@@ -202,11 +206,11 @@
                                                 if (item.SixMonthReturnOriginalCurrency < 0)
                                                 {
                                                     <span class="o-fall">@item.SixMonthReturnOriginalCurrency%</span>
-												}
-												else if (item.SixMonthReturnOriginalCurrency == 0)
-												{
-													<span>@item.SixMonthReturnOriginalCurrency%</span>
-												}
+                                                }
+                                                else if (item.SixMonthReturnOriginalCurrency == 0)
+                                                {
+                                                    <span>@item.SixMonthReturnOriginalCurrency%</span>
+                                                }
                                                 else
                                                 {
                                                     <span class="o-rise">@item.SixMonthReturnOriginalCurrency%</span>
