--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicCards/Graphic3Cards.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.GraphicCards
 @model GraphicCardsModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
 	return;
 }
