--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Notice/BigNotice.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Notice/BigNotice.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.Notice
 @model NoticeModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
     return;
 }
