--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
@@ -5,10 +5,7 @@
 
 @{
     var modelitem = Model.Item;
-    if (Model == null)
-    {
-        return;
-    }
+    if (modelitem == null) { return; }
 }
 
 <div class="l-mainstage">
