--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceFundRank/PerformanceFundRank.cshtml
@@ -2,7 +2,7 @@
 @using Feature.Wealth.Component.Models.PerformanceFundRank
 @model PerformanceFundRankModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
     return;
 }
