--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -2,12 +2,9 @@
 @using Feature.Wealth.Component.Models.DiscountPremium
 @model DiscountPremiumModel
 
-@if (Model.Item == null)
-{
-    return;
-}
 @{
     var modelitem = Model.Item;
+    if (modelitem == null) { return; }
 }
 
 <div class="l-mainstage">
