--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicTwoCards/GraphicTwoCards.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/GraphicTwoCards/GraphicTwoCards.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Feature.Wealth.Component.Models.GraphicTwoCards.GraphicTwoCardsModel
 @using Feature.Wealth.Component.Models.GraphicTwoCards
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
