--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HorizontalGraphics/HorizontalGraphics.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HorizontalGraphics/HorizontalGraphics.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.HorizontalGraphics
 @model HorizontalGraphicsModel
 
-@if (Model == null)
+@if (Model.DataSource == null)
 {
     return;
 }
