--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PageTitle/PageTitle.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PageTitle/PageTitle.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Feature.Wealth.Component.Models.PageTitle
 @model PageTitleModel
 
-@if (Model == null)
+@if (Model.Item == null)
 {
     return;
 }
