--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
@@ -5,7 +5,7 @@
 
 @{
     var modelitem = Model.Item;
-    if (Model == null) { return; }
+    if (modelitem == null) { return; }
 }
 
 <div class="l-mainstage">
