--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuSmartType/TftfuSmartType.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TftfuSmartType/TftfuSmartType.cshtml
@@ -1,10 +1,10 @@
 ﻿@using Foundation.Wealth.Helper
-@using Feature.Wealth.Component.Models.Invest
 @using Feature.Wealth.Component.Models.TftfuStg
 @model TftfuStgModel
 
 @{
 	var modelitem = Model.Item;
+	if (modelitem == null) { return; }
 }
 
 <div class="l-mainstage">
