--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SiteProductSearchIndex.cshtml
@@ -806,7 +806,7 @@
                         let detailUrl = suggestion.data.detailUrl ? suggestion.data.detailUrl : '#';
 
                         // 比較 按鈕
-                        let $compare = suggestion.data.compareBtnHtml ? suggestion.data.compareBtnHtml : '';
+                        let $compare = suggestion.data.compareBtnHtml ? `<a ${suggestion.data.compareBtnHtml}></a>` : '';
                         // like 按鈕
                         let $like = suggestion.data.focusBtnHtml ? `<a ${suggestion.data.focusBtnHtml}></a>` : '';
                         // 申購按鈕
@@ -894,7 +894,7 @@
                                     type: 'Fund',
                                     detailUrl: '@Model.SearchResultModel.FundDetailPageLink' + '?' + $.param({ id: item.ProductCode }),
                                     purchase: item.CanOnlineSubscription,
-                                    compareBtnHtml: item.CompareButtonHtml,
+                                    compareBtnHtml: item.CompareButtonAutoHtml,
                                     focusBtnHtml: item.FocusButtonAutoHtml,
                                     subscribeBtnHtml: item.SubscribeButtonAutoHtml
                                 }
@@ -909,7 +909,7 @@
                                     type: 'ETF',
                                     detailUrl: '@Model.SearchResultModel.EtfDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                                     purchase: item.CanOnlineSubscription,
-                                    compareBtnHtml: item.CompareButtonHtml,
+                                    compareBtnHtml: item.CompareButtonAutoHtml,
                                     focusBtnHtml: item.FocusButtonAutoHtml,
                                     subscribeBtnHtml: item.SubscribeButtonAutoHtml
                                 }
